<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_dni"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="72dp"
        android:text="@string/txt_dni"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dni"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/txt_dni"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_sueldo"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_sueldo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <EditText
        android:id="@+id/sueldo"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/txt_sueldo"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/txt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/dni" />

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_nombre"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dni" />

    <Button
        android:id="@+id/btn_nuevo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="88dp"
        android:onClick="nuevo"
        android:text="@string/button_nuevo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sueldo" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="88dp"
        android:onClick="calcular"
        android:text="@string/button_calcular"
        app:layout_constraintStart_toEndOf="@+id/btn_nuevo2"
        app:layout_constraintTop_toBottomOf="@+id/txt_sueldo" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="88dp"
        android:onClick="volver"
        android:text="@string/button_volver3"
        app:layout_constraintStart_toEndOf="@+id/btn_calcular"
        app:layout_constraintTop_toBottomOf="@+id/sueldo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="76dp"
        android:text="@string/txt_total"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_nuevo2" />

    <TextView
        android:id="@+id/total"
        android:layout_width="150dp"
        android:layout_height="39dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="76dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />

</androidx.constraintlayout.widget.ConstraintLayout>